--- a/react/index.html
+++ b/react/index.html
@@ -11,12 +11,11 @@
   <body>
     <div id="app"></div>
     <script type="text/javascript">
-    var App, ContactForm, Contacts, Contact 
+    var App, Search, Gif 
     </script>
 
-    <script type="text/babel" src="components/ContactForm.js"></script>
-    <script type="text/babel" src="components/Contact.js"></script>
-    <script type="text/babel" src="components/Contacts.js"></script>
+    <script type="text/babel" src="components/Gif.js"></script>
+    <script type="text/babel" src="components/Search.js"></script>
     <script type="text/babel" src="components/App.js"></script>
     <script type="text/babel" src="script.js"></script>
   </body>
