--- a/ES6/index.html
+++ b/ES6/index.html
@@ -5,6 +5,7 @@
     <title>Apka!</title>
   </head>
   <body>
+    <script type="text/javascript" src="node_modules/babel-polyfill/dist/polyfill.js"></script?
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
