--- a/ES6/index.html
+++ b/ES6/index.html
@@ -2,10 +2,22 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Apka!</title>
+    <title>Promisy</title>
+    <script src="https://unpkg.com/react@latest/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@latest/dist/react-dom.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   </head>
   <body>
-    <script type="text/javascript" src="node_modules/babel-polyfill/dist/polyfill.js"></script?
-    <script type="text/javascript" src="script.js"></script>
+    <div id="app"></div>
+    <script type="text/javascript" src="node_modules/babel-polyfill/dist/polyfill.js"></script>
+    
+    <script type="text/javascript">
+    var App, Search, Gif 
+    </script>
+
+    <script type="text/babel" src="components/Gif.js"></script>
+    <script type="text/babel" src="components/Search.js"></script>
+    <script type="text/babel" src="components/App.js"></script>
+    <script type="text/babel" src="script.js"></script>
   </body>
 </html>
