--- a/ES6/index.html
+++ b/ES6/index.html
@@ -2,22 +2,25 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Promisy</title>
-    <script src="https://unpkg.com/react@latest/dist/react.js"></script>
-    <script src="https://unpkg.com/react-dom@latest/dist/react-dom.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+    <title>Timer!</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <div id="app"></div>
-    <script type="text/javascript" src="node_modules/babel-polyfill/dist/polyfill.js"></script>
-    
-    <script type="text/javascript">
-    var App, Search, Gif 
-    </script>
-
-    <script type="text/babel" src="components/Gif.js"></script>
-    <script type="text/babel" src="components/Search.js"></script>
-    <script type="text/babel" src="components/App.js"></script>
-    <script type="text/babel" src="script.js"></script>
+    <div class="container">
+      <nav class="controls">
+        <div class="navButtons">
+          <a href="#" class="button" id="addTime">Add time to list</a>
+          <a href="#" class="button" id="resetTimes">Reset list</a>  
+        </div>
+        <div class="startStopButtons">
+          <a href="#" class="button" id="start">Start</a>
+          <a href="#" class="button" id="stop">Stop</a>
+          <a href="#" class="button" id="reset">Reset</a>
+        </div>
+      </nav>
+      <div class="stopwatch"></div>
+      <ol class="results"></ol>
+    </div>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
