--- a/ES6/3.7_stopwatch_react/index.html
+++ b/ES6/3.7_stopwatch_react/index.html
@@ -2,25 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Timer!</title>
+    <title>React Timer!</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
+    <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
   </head>
   <body>
-    <div class="container">
-      <nav class="controls">
-        <div class="navButtons">
-          <a href="#" class="button" id="addTime">Add time to list</a>
-          <a href="#" class="button" id="resetTimes">Reset list</a>  
-        </div>
-        <div class="startStopButtons">
-          <a href="#" class="button" id="start">Start</a>
-          <a href="#" class="button" id="stop">Stop</a>
-          <a href="#" class="button" id="reset">Reset</a>
-        </div>
-      </nav>
-      <div class="stopwatch"></div>
-      <ol class="results"></ol>
-    </div>
-    <script type="text/javascript" src="script.js"></script>
+    <div id="app"></div>
+      <script src="build.js"></script>
+
   </body>
 </html>
